# pytest-demo

./: README.md  pyproject.toml
pytest-demo/: main.py
pytest-demo/schemas/: category.py  pet.py  tag.py
pytest-demo/testsing/: conftest.py
pytest-demo/testsing/test_view/: test_pet_create.py  test_pet_get.py  test_pet_view.py
